# python-llm-learning

./: README.md  main.py  pyproject.toml
app/: main.py
