[project]
name = "python-llm-learning"
version = "0.1.0"
description = "Daily learning and practice of Python with a focus on LLMs (Large Language Models)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "openai-whisper>=20250625",
    "requests>=2.32.4",
    "selectolax>=0.3.30",
    "uvicorn>=0.34.3",
]
